# T2IScoreScore

./: .gitignore  README.md  README.old.md  asharma_run_llava.py  asharma_sbert_mcqa.py  consolidate_scripts.py  fuyu_gen_raw_all.py  kstest_average_weighted.csv  mplug_gen_raw_all.py  pyproject.toml  read_csv_utils.py  requirements.txt  scores-final.csv  scoring.py  setup.py  test.csv  tmp
correlation_scores/: mahsa_eval.py
data/: HalluVision.csv  HalluVision_DSG_Q.csv  HalluVision_TIFA_Q.csv  T2S_DSG_Q_dependency.csv  TS2_DSG_Q.csv  TS2_TIFA_Q.csv  metadata.csv
halluvision_consolidation/: .consolidate_scripts.py.swp  consolidate_scripts.py  mplug1_dsg.csv  node_variances.csv  spearman_corrs.csv  spearman_corrs_weighted.csv  spearman_means_11-25-23.xlsx  test.csv
output/: HalluVision_scores.csv  VIEScore.csv  a_fuyu_tifa.csv  a_mplug_dsg.csv  blipscore.csv  gen_scatter_final.py  gpt4v_dsg_score.csv  gpt4v_tifa_score.csv  kstest_average_weighted.csv  kstest_counts_weighted.csv  metric_results.csv  metric_summary.csv  mplug1_tifa.csv  node_variances.csv  node_variances_counts.csv  scores-final-all.csv  scores-final-blip1d.csv  scores-final-blip1t.csv  scores-final-ibt.csv  scores-final-vie.csv  scores_final_all.csv  scores_final_all_2 copy.csv  scores_final_all_3.csv  spearman_corrs_weighted.csv  spearman_counts.csv  spearman_counts_weighted.csv  table_results_prelatex.csv
question_generator/: dsg_questions_generator.py
scorescore/: consolidate_scripts.py  node_variances.csv  node_variances_counts.csv  spearman_corrs_weighted.csv  spearman_counts_weighted.csv
(+255 files in other folders)
